welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value vuBiscuit
	if (vuBiscuit)
            ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
	return;
        ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
for (i<-0 to 6)
      ^